@@ -1,3 +1,7 @@
+2004-04-22  Bruno Haible  <bruno@clisp.org>
+
+	* lispbibl.d (direction_t): Work around a g++ 3.4.0 bug.
+
 2004-04-22  Sam Steingold  <sds@gnu.org>
 
 	* pathname.d (namestring_correctly_parseable_p): fixed the last patch
